--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,100 @@
+html,
+body,
+#root {
+  height: 100%;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: auto 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  display: grid;
+  grid-template-rows: 0.25fr 1fr auto 1fr;
+  grid-template-columns: 1fr 1fr;
+  height: 100%;
 }
 
+.title {
+  grid-area: 1/1/2/2;
+  justify-self: start;
+  align-self: end;
+  margin-left: 1rem;
+}
 
+.clearButton {
+  width: 3rem;
+  height: 1.5rem;
+  justify-self: end;
+  grid-area: 1/1/2/2;
+  align-self: end;
+  margin-right: 1rem;
+}
 
+.previewDropdown {
+  grid-area: 1/2/2/3;
+  justify-self: start;
+  align-self: end;
+  margin-left: 1rem;
+}
+
+.fileInput {
+  grid-area: 1/1/2/2;
+  justify-self: end;
+  align-self: end;
+}
+
+.editor {
+  height: 100%;
+  border: 0.01rem solid black;
+  display: flex;
+  grid-area: 2/1/5/2;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+textarea {
+  width: 100%;
+  padding: 0;
+  border-image: none;
+  border-width: 0;
+  border: none;
+  margin: 0.5rem;
+}
+
+.preview {
+  grid-area: 2/2/5/3;
+  text-align: start;
+  border: 0.01rem solid black;
+  overflow: scroll;
+  height: 100%;
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
+
+.footer {
+  justify-content: center;
+  grid-area: 5/1/5/3;
+  font-size: 1rem;
+  margin-top: 1rem;
+}
+
+.preview::-webkit-scrollbar-track {
+  border: 0.01rem solid #000;
+  padding: 2px 0;
+  background-color: #404040;
+}
+
+.preview::-webkit-scrollbar {
+  width: 0.25rem;
+  height: 0.25rem;
+}
+
+.preview::-webkit-scrollbar-thumb {
+  border-radius: 0;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #737272;
+  border: 1px solid #000;
+}
+
+/*# sourceMappingURL=index.css.map */
