--- a/src/index.css
+++ b/src/index.css
@@ -10,47 +10,107 @@ body {
 
 .App {
   display: grid;
-  grid-template-rows: 0.25fr 1fr auto 1fr;
-  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 0.25fr 1fr 0.1fr 1fr 0.1fr;
+  grid-template-columns: 1fr;
   height: 100%;
+  font-size: 0.75rem;
+}
+@media (min-width: 1024px) {
+  .App {
+    display: grid;
+    grid-template-rows: 0.25fr 1fr auto 1fr;
+    grid-template-columns: 1fr 1fr;
+    height: 100%;
+    font-size: 1rem;
+  }
 }
 
 .title {
-  grid-area: 1/1/2/2;
+  grid-area: 1/1/2/-1;
   justify-self: start;
   align-self: end;
   margin-left: 1rem;
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+@media (min-width: 1024px) {
+  .title {
+    grid-area: 1/1/2/2;
+    justify-self: start;
+    align-self: end;
+    margin-left: 1rem;
+  }
 }
 
 .clearButton {
   width: 3rem;
   height: 1.5rem;
-  justify-self: end;
-  grid-area: 1/1/2/2;
-  align-self: end;
-  margin-right: 1rem;
+  justify-self: center;
+  grid-area: 5/1/6/1;
+}
+@media (min-width: 1024px) {
+  .clearButton {
+    width: 3rem;
+    height: 1.5rem;
+    justify-self: end;
+    grid-area: 1/1/2/2;
+    align-self: end;
+    margin-right: 1rem;
+  }
 }
 
 .previewDropdown {
-  grid-area: 1/2/2/3;
-  justify-self: start;
+  font-size: 0.75rem;
+  grid-area: 1/1/2/1;
+  justify-self: end;
   align-self: end;
-  margin-left: 1rem;
+  margin-right: 1rem;
+}
+@media (min-width: 1024px) {
+  .previewDropdown {
+    grid-area: 1/2/2/3;
+    justify-self: start;
+    align-self: end;
+    margin-left: 1rem;
+    font-size: 1rem;
+  }
 }
 
 .fileInput {
+  font-size: 0.75rem;
   grid-area: 1/1/2/2;
   justify-self: end;
   align-self: end;
+  display: none;
+}
+@media (min-width: 1024px) {
+  .fileInput {
+    grid-area: 1/1/2/2;
+    justify-self: end;
+    align-self: end;
+    visibility: visible;
+  }
 }
 
 .editor {
   height: 100%;
   border: 0.01rem solid black;
+  font-size: 0.75rem;
   display: flex;
-  grid-area: 2/1/5/2;
+  grid-area: 2/1/3/2;
   margin-left: 1rem;
   margin-right: 1rem;
+}
+@media (min-width: 1024px) {
+  .editor {
+    height: 100%;
+    border: 0.01rem solid black;
+    display: flex;
+    grid-area: 2/1/5/2;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    font-size: 1rem;
+  }
 }
 
 textarea {
@@ -63,7 +123,8 @@ textarea {
 }
 
 .preview {
-  grid-area: 2/2/5/3;
+  font-size: 0.75rem;
+  grid-area: 4/1/5/1;
   text-align: start;
   border: 0.01rem solid black;
   overflow: scroll;
@@ -71,12 +132,30 @@ textarea {
   margin-right: 1rem;
   margin-left: 1rem;
 }
+@media (min-width: 1024px) {
+  .preview {
+    grid-area: 2/2/5/3;
+    text-align: start;
+    border: 0.01rem solid black;
+    overflow: scroll;
+    height: 100%;
+    margin-right: 1rem;
+    margin-left: 1rem;
+  }
+}
 
 .footer {
-  justify-content: center;
-  grid-area: 5/1/5/3;
-  font-size: 1rem;
-  margin-top: 1rem;
+  justify-self: end;
+  grid-area: 6/1/7/1;
+  font-size: 0.55rem;
+}
+@media (min-width: 1024px) {
+  .footer {
+    justify-self: center;
+    grid-area: 5/1/5/3;
+    font-size: 1rem;
+    margin-top: 0.5rem;
+  }
 }
 
 .preview::-webkit-scrollbar-track {
