--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
+/*Variables*/
 html,
 body,
 #root {
   height: 100%;
+  font-family: "Work Sans", sans-serif;
+  color: #474747;
+  font-size: 16px;
 }
 
 body {
@@ -10,70 +14,105 @@ body {
 
 .App {
   display: grid;
-  grid-template-rows: 0.25fr 1fr 0.1fr 1fr 0.1fr;
+  grid-template-rows: 3rem 1fr 2.5rem 1fr 0.25rem;
   grid-template-columns: 1fr;
   height: 100%;
   font-size: 0.75rem;
 }
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .App {
     display: grid;
-    grid-template-rows: 0.25fr 1fr auto 1fr;
+    grid-template-rows: 2.5rem 1fr 1rem;
     grid-template-columns: 1fr 1fr;
     height: 100%;
     font-size: 1rem;
   }
 }
 
-.title {
-  grid-area: 1/1/2/-1;
+.header-editor,
+.header-preview {
+  grid-area: 1/1/2/1;
   justify-self: start;
   align-self: end;
   margin-left: 1rem;
-  font-size: 1.1rem;
+  font-size: 0.95rem;
   font-weight: 600;
 }
-@media (min-width: 1024px) {
-  .title {
+@media (min-width: 768px) {
+  .header-editor,
+.header-preview {
     grid-area: 1/1/2/2;
     justify-self: start;
     align-self: end;
     margin-left: 1rem;
+    font-size: 1.25rem;
+  }
+}
+
+.header-preview {
+  grid-area: 3/1/4/2;
+}
+@media (min-width: 768px) {
+  .header-preview {
+    grid-area: 1/2/2/3;
   }
 }
 
 .clearButton {
+  background-color: #FFFFFF;
+  border: 0.05rem solid #5B5B5B;
+  color: #FF00EE;
+  border-radius: 0.2rem;
+  text-decoration: none;
+  -webkit-appearance: none;
   width: 3rem;
   height: 1.5rem;
-  justify-self: center;
-  grid-area: 5/1/6/1;
+  grid-area: 1/1/2/2;
+  justify-self: end;
+  align-self: end;
+  margin-right: 1rem;
 }
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .clearButton {
+    background-color: #FFFFFF;
+    border: 0.05rem solid #5B5B5B;
+    color: #FF00EE;
+    border-radius: 0.2rem;
+    text-decoration: none;
+    -webkit-appearance: none;
     width: 3rem;
     height: 1.5rem;
     justify-self: end;
     grid-area: 1/1/2/2;
     align-self: end;
     margin-right: 1rem;
+    margin-bottom: 0.1rem;
   }
 }
 
 .previewDropdown {
-  font-size: 0.75rem;
-  grid-area: 1/1/2/1;
+  grid-area: 3/1/4/3;
   justify-self: end;
   align-self: end;
   margin-right: 1rem;
 }
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .previewDropdown {
     grid-area: 1/2/2/3;
-    justify-self: start;
+    justify-self: end;
     align-self: end;
     margin-left: 1rem;
     font-size: 1rem;
   }
+}
+
+select {
+  height: 1.5rem;
+  background-color: #FFFFFF;
+  color: #FF00EE;
+  border: 0.05rem solid #5B5B5B;
+  border-radius: 0.2rem;
+  margin-bottom: 0.1rem;
 }
 
 .fileInput {
@@ -83,7 +122,7 @@ body {
   align-self: end;
   display: none;
 }
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .fileInput {
     grid-area: 1/1/2/2;
     justify-self: end;
@@ -94,22 +133,24 @@ body {
 
 .editor {
   height: 100%;
-  border: 0.01rem solid black;
+  border: 0.01rem solid #5B5B5B;
   font-size: 0.75rem;
   display: flex;
   grid-area: 2/1/3/2;
   margin-left: 1rem;
   margin-right: 1rem;
+  margin-top: 0.1rem;
 }
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .editor {
     height: 100%;
-    border: 0.01rem solid black;
+    border: 0.01rem solid #5B5B5B;
     display: flex;
-    grid-area: 2/1/5/2;
+    grid-area: 2/1/3/2;
     margin-left: 1rem;
     margin-right: 1rem;
     font-size: 1rem;
+    margin-top: auto;
   }
 }
 
@@ -119,61 +160,60 @@ textarea {
   border-image: none;
   border-width: 0;
   border: none;
-  margin: 0.5rem;
+  resize: none;
+  outline: none;
+  margin: 0.05rem;
+  padding: 0 0.25rem;
+  font-size: 0.75rem;
 }
 
 .preview {
   font-size: 0.75rem;
   grid-area: 4/1/5/1;
   text-align: start;
-  border: 0.01rem solid black;
+  border: 0.01rem solid #5B5B5B;
   overflow: scroll;
   height: 100%;
   margin-right: 1rem;
   margin-left: 1rem;
+  padding: 0 0.25rem;
 }
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .preview {
-    grid-area: 2/2/5/3;
-    text-align: start;
-    border: 0.01rem solid black;
-    overflow: scroll;
-    height: 100%;
-    margin-right: 1rem;
-    margin-left: 1rem;
+    grid-area: 2/2/3/3;
   }
 }
 
 .footer {
-  justify-self: end;
+  justify-self: center;
   grid-area: 6/1/7/1;
   font-size: 0.55rem;
 }
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .footer {
-    justify-self: center;
-    grid-area: 5/1/5/3;
-    font-size: 1rem;
-    margin-top: 0.5rem;
+    grid-area: 3/1/4/3;
+    font-size: 0.75rem;
   }
 }
 
-.preview::-webkit-scrollbar-track {
-  border: 0.01rem solid #000;
-  padding: 2px 0;
-  background-color: #404040;
+img {
+  width: 25%;
+  height: auto;
 }
 
-.preview::-webkit-scrollbar {
-  width: 0.25rem;
-  height: 0.25rem;
+.preview::-webkit-scrollbar-track, textarea::-webkit-scrollbar-track {
+  border: 0.01rem solid transparent;
+  background-clip: content-box;
 }
 
-.preview::-webkit-scrollbar-thumb {
-  border-radius: 0;
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #737272;
-  border: 1px solid #000;
+.preview::-webkit-scrollbar, textarea::-webkit-scrollbar {
+  width: 0.2rem;
+  height: 0;
+}
+
+.preview::-webkit-scrollbar-thumb, textarea::-webkit-scrollbar-thumb {
+  border: 1px solid #FF00EE;
+  background: #FF00EE;
 }
 
 /*# sourceMappingURL=index.css.map */
