--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -1,162 +1,188 @@
 html,
 body,
 #root {
-	height: 100%;
+  height: 100%;
+  font-family: "Work Sans", sans-serif;
+  color: $text-color;
+  font-size: $root-font;
 }
 
 body {
-	margin: auto 0;
+  margin: auto 0;
 }
 
 .App {
-	display: grid;
-	grid-template-rows: 0.25fr 1fr 0.1fr 1fr 0.1fr;
-	grid-template-columns: 1fr;
-	height: 100%;
-	font-size: 0.75rem;
+  display: grid;
+  grid-template-rows: 3rem 1fr 2.5rem 1fr .25rem;
+  grid-template-columns: 1fr;
+  height: 100%;
+  font-size: 0.75rem;
 
-	@include for-desktop-up {
-		display: grid;
-		grid-template-rows: 0.25fr 1fr auto 1fr;
-		grid-template-columns: 1fr 1fr;
-        height: 100%;
-        font-size: 1rem;
-	}
+  @include for-desktop-up {
+    display: grid;
+    grid-template-rows: 2.5rem 1fr 1rem;
+    grid-template-columns: 1fr 1fr;
+    height: 100%;
+    font-size: 1rem;
+  }
 }
 
-.title {
-	grid-area: 1/1/2/-1;
-	justify-self: start;
-	align-self: end;
-	margin-left: 1rem;
-	font-size: 1.1rem;
-	font-weight: 600;
+.header-editor,
+.header-preview {
+  grid-area: 1/1/2/1;
+  justify-self: start;
+  align-self: end;
+  margin-left: 1rem;
+  font-size: .95rem;
+  font-weight: 600;
 
-	@include for-desktop-up {
-		grid-area: 1/1/2/2;
-		justify-self: start;
-		align-self: end;
-		margin-left: 1rem;
-	}
+  @include for-desktop-up {
+    grid-area: 1/1/2/2;
+    justify-self: start;
+    align-self: end;
+	margin-left: 1rem;
+	font-size: 1.25rem;
+  }
+}
+
+.header-preview {
+  grid-area: 3/1/4/2;
+
+  @include for-desktop-up {
+    grid-area: 1/2/2/3;
+  }
 }
 
 .clearButton {
-    @include Button;
-	justify-self: center;
-	grid-area: 5/1/6/1;
+  @include Button;
+  grid-area: 1/1/2/2;
+  justify-self: end;
+  align-self: end;
+  margin-right: 1rem;
 
-	@include for-desktop-up {
-		@include Button;
-		justify-self: end;
-		grid-area: 1/1/2/2;
-		align-self: end;
-		margin-right: 1rem;
-	}
+  @include for-desktop-up {
+    @include Button;
+    justify-self: end;
+    grid-area: 1/1/2/2;
+    align-self: end;
+	margin-right: 1rem;
+	margin-bottom: .1rem;
+  }
 }
 
 .previewDropdown {
-	font-size: 0.75rem;
-	grid-area: 1/1/2/1;
-	justify-self: end;
-	align-self: end;
-	margin-right: 1rem;
+  grid-area: 3/1/4/3;
+  justify-self: end;
+  align-self: end;
+  margin-right: 1rem;
 
-	@include for-desktop-up {
-		grid-area: 1/2/2/3;
-		justify-self: start;
-		align-self: end;
-        margin-left: 1rem;
-        font-size: 1rem;
-	}
+  @include for-desktop-up {
+    grid-area: 1/2/2/3;
+    justify-self: end;
+    align-self: end;
+    margin-left: 1rem;
+    font-size: 1rem;
+  }
+}
+
+select {
+  @include Dropdown;
+  margin-bottom: 0.1rem;
 }
 
 .fileInput {
-	font-size: 0.75rem;
-	grid-area: 1/1/2/2;
-	justify-self: end;
-	align-self: end;
-	display: none;
+  font-size: 0.75rem;
+  grid-area: 1/1/2/2;
+  justify-self: end;
+  align-self: end;
+  display: none;
 
-	@include for-desktop-up {
-		grid-area: 1/1/2/2;
-		justify-self: end;
-        align-self: end;
-        visibility: visible;
-        
-	}
+  @include for-desktop-up {
+    grid-area: 1/1/2/2;
+    justify-self: end;
+    align-self: end;
+    visibility: visible;
+  }
 }
 
 .editor {
-    @include Editor;
-	font-size: 0.75rem;
-	display: flex;
-	grid-area: 2/1/3/2;
-	margin-left: 1rem;
-	margin-right: 1rem;
+  @include Editor;
+  font-size: 0.75rem;
+  display: flex;
+  grid-area: 2/1/3/2;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-top: .1rem;
 
-	@include for-desktop-up {
-		@include Editor;
-		display: flex;
-		grid-area: 2/1/5/2;
-		margin-left: 1rem;
-        margin-right: 1rem;
-        font-size: 1rem;
-	}
+
+  @include for-desktop-up {
+    @include Editor;
+    display: flex;
+    grid-area: 2/1/3/2;
+    margin-left: 1rem;
+    margin-right: 1rem;
+	font-size: 1rem;
+	margin-top: auto;
+	
+  }
 }
 
 textarea {
-	@include Textarea;
-	margin: 0.5rem;
+  @include Textarea;
+  margin: 0.05rem;
+  padding: 0 .25rem;
+  font-size: .75rem;
 }
 
 .preview {
-	font-size: 0.75rem;
-	grid-area: 4/1/5/1;
-	text-align: start;
-	border: 0.01rem solid black;
-	overflow: scroll;
-	height: 100%;
-	margin-right: 1rem;
-	margin-left: 1rem;
+  font-size: 0.75rem;
+  grid-area: 4/1/5/1;
+  text-align: start;
+  border: 0.01rem solid $border-color;
+  overflow: scroll;
+  height: 100%;
+  margin-right: 1rem;
+  margin-left: 1rem;
+  padding: 0 0.25rem;
 
-	@include for-desktop-up {
-		grid-area: 2/2/5/3;
-		text-align: start;
-		border: 0.01rem solid black;
-		overflow: scroll;
-		height: 100%;
-		margin-right: 1rem;
-		margin-left: 1rem;
-	}
+  @include for-desktop-up {
+    grid-area: 2/2/3/3;
+  }
 }
 
 .footer {
-	justify-self: end;
-	grid-area: 6/1/7/1;
-	font-size: 0.55rem;
+  justify-self: center;
+  grid-area: 6/1/7/1;
+  font-size: 0.55rem;
 
-	@include for-desktop-up {
-		justify-self: center;
-		grid-area: 5/1/5/3;
-		font-size: 1rem;
-		margin-top: .5rem;
-	}
+  @include for-desktop-up {
+
+    grid-area: 3/1/4/3;
+    font-size: .75rem;
+    
+  }
 }
 
-.preview::-webkit-scrollbar-track {
-	border: 0.01rem solid #000;
-	padding: 2px 0;
-	background-color: #404040;
+img{
+	width: 25%;
+	height: auto;
 }
 
-.preview::-webkit-scrollbar {
-	width: 0.25rem;
-	height: 0.25rem;
+.preview::-webkit-scrollbar-track, textarea::-webkit-scrollbar-track {
+  border: 0.01rem solid transparent;
+  background-clip: content-box;
 }
 
-.preview::-webkit-scrollbar-thumb {
-	border-radius: 0;
-	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	background-color: #737272;
-	border: 1px solid #000;
+.preview::-webkit-scrollbar, textarea::-webkit-scrollbar {
+  width: 0.2rem;
+  height: 0;
+  
 }
+
+.preview::-webkit-scrollbar-thumb, textarea::-webkit-scrollbar-thumb  {
+
+  border: 1px solid $button-text-color;
+  background: $button-text-color;
+}
+
+
