--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,24 @@
+/*Media Queries*/
 /*Variables*/
+/*Scrollbar for chrome and safari*/
+.preview::-webkit-scrollbar-track,
+textarea::-webkit-scrollbar-track {
+  border: 0.01rem solid transparent;
+  background-clip: content-box;
+}
+
+.preview::-webkit-scrollbar,
+textarea::-webkit-scrollbar {
+  width: 0.4rem;
+  height: 0;
+}
+
+.preview::-webkit-scrollbar-thumb,
+textarea::-webkit-scrollbar-thumb {
+  border: 1px solid #ff00ee;
+  background: #ff00ee;
+}
+
 html,
 body,
 #root {
@@ -14,7 +34,7 @@ body {
 
 .App {
   display: grid;
-  grid-template-rows: 3rem 1fr 2.5rem 1fr 0.25rem;
+  grid-template-rows: 3rem 1fr 2.5rem 1fr 0.75rem;
   grid-template-columns: 1fr;
   height: 100%;
   font-size: 0.75rem;
@@ -22,10 +42,19 @@ body {
 @media (min-width: 768px) {
   .App {
     display: grid;
-    grid-template-rows: 2.5rem 1fr 1rem;
+    grid-template-rows: 5.5rem 0.95fr auto;
     grid-template-columns: 1fr 1fr;
-    height: 100%;
     font-size: 1rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 899px) and (orientation: landscape) {
+  .App {
+    grid-template-rows: 4rem 0.95fr auto;
+  }
+}
+@media (min-width: 560px) and (max-width: 767px) and (orientation: landscape) {
+  .App {
+    grid-template-rows: 3rem 1fr 2.5rem 1fr 0.5rem;
   }
 }
 
@@ -59,9 +88,9 @@ body {
 }
 
 .clearButton {
-  background-color: #FFFFFF;
-  border: 0.05rem solid #5B5B5B;
-  color: #FF00EE;
+  background-color: #ffffff;
+  border: 0.05rem solid #5b5b5b;
+  color: #ff00ee;
   border-radius: 0.2rem;
   text-decoration: none;
   -webkit-appearance: none;
@@ -74,18 +103,6 @@ body {
 }
 @media (min-width: 768px) {
   .clearButton {
-    background-color: #FFFFFF;
-    border: 0.05rem solid #5B5B5B;
-    color: #FF00EE;
-    border-radius: 0.2rem;
-    text-decoration: none;
-    -webkit-appearance: none;
-    width: 3rem;
-    height: 1.5rem;
-    justify-self: end;
-    grid-area: 1/1/2/2;
-    align-self: end;
-    margin-right: 1rem;
     margin-bottom: 0.1rem;
   }
 }
@@ -108,9 +125,9 @@ body {
 
 select {
   height: 1.5rem;
-  background-color: #FFFFFF;
-  color: #FF00EE;
-  border: 0.05rem solid #5B5B5B;
+  background-color: #ffffff;
+  color: #ff00ee;
+  border: 0.05rem solid #5b5b5b;
   border-radius: 0.2rem;
   margin-bottom: 0.1rem;
 }
@@ -124,63 +141,60 @@ select {
 }
 @media (min-width: 768px) {
   .fileInput {
+    display: none;
+  }
+}
+@media (min-width: 1024px) {
+  .fileInput {
     grid-area: 1/1/2/2;
     justify-self: end;
     align-self: end;
-    visibility: visible;
+    display: none;
   }
 }
 
 .editor {
-  height: 100%;
-  border: 0.01rem solid #5B5B5B;
+  padding: 0.25rem;
+  border: 0.05rem solid #5b5b5b;
+  background-color: #080808;
+  color: #f2ecff;
+  resize: none;
+  outline: none;
+  scrollbar-color: #ff00ee white;
+  scrollbar-width: thin;
+  border-radius: 0;
   font-size: 0.75rem;
   display: flex;
   grid-area: 2/1/3/2;
   margin-left: 1rem;
   margin-right: 1rem;
-  margin-top: 0.1rem;
+  margin-top: 0.2rem;
 }
 @media (min-width: 768px) {
   .editor {
-    height: 100%;
-    border: 0.01rem solid #5B5B5B;
-    display: flex;
     grid-area: 2/1/3/2;
-    margin-left: 1rem;
-    margin-right: 1rem;
     font-size: 1rem;
-    margin-top: auto;
   }
 }
 
-textarea {
-  width: 100%;
-  padding: 0;
-  border-image: none;
-  border-width: 0;
-  border: none;
-  resize: none;
-  outline: none;
-  margin: 0.05rem;
-  padding: 0 0.25rem;
-  font-size: 0.75rem;
-}
-
 .preview {
-  font-size: 0.75rem;
+  font-size: 0.65rem;
   grid-area: 4/1/5/1;
   text-align: start;
-  border: 0.01rem solid #5B5B5B;
+  border: 0.01rem solid #5b5b5b;
   overflow: scroll;
-  height: 100%;
   margin-right: 1rem;
   margin-left: 1rem;
+  margin-top: 0.1rem;
   padding: 0 0.25rem;
+  scrollbar-color: #ff00ee white;
+  scrollbar-width: thin;
 }
 @media (min-width: 768px) {
   .preview {
     grid-area: 2/2/3/3;
+    font-size: 0.75rem;
+    margin-top: 0.2rem;
   }
 }
 
@@ -193,27 +207,13 @@ textarea {
   .footer {
     grid-area: 3/1/4/3;
     font-size: 0.75rem;
+    align-self: end;
   }
 }
 
 img {
   width: 25%;
   height: auto;
-}
-
-.preview::-webkit-scrollbar-track, textarea::-webkit-scrollbar-track {
-  border: 0.01rem solid transparent;
-  background-clip: content-box;
-}
-
-.preview::-webkit-scrollbar, textarea::-webkit-scrollbar {
-  width: 0.2rem;
-  height: 0;
-}
-
-.preview::-webkit-scrollbar-thumb, textarea::-webkit-scrollbar-thumb {
-  border: 1px solid #FF00EE;
-  background: #FF00EE;
 }
 
 /*# sourceMappingURL=index.css.map */
