--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -33,10 +33,22 @@ body {
     grid-template-rows: 3rem 1fr 2.5rem 1fr 0.5rem;
   }
 }
+.container-header-editor {
+  grid-area: 1/1/2/2;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
 
-.header-editor,
+.header-editor {
+  font-size: 0.95rem;
+  font-weight: 600;
+}
+
 .header-preview {
-  grid-area: 1/1/2/1;
+  grid-area: 3/1/4/2;
   justify-self: start;
   align-self: end;
   margin-left: 1rem;
@@ -44,7 +56,7 @@ body {
   font-weight: 600;
 
   @include for-tablet-up {
-    grid-area: 1/1/2/2;
+    grid-area: 1/2/2/3;
     justify-self: start;
     align-self: end;
     margin-left: 1rem;
@@ -52,20 +64,23 @@ body {
   }
 }
 
-.header-preview {
-  grid-area: 3/1/4/2;
-
-  @include for-tablet-up {
-    grid-area: 1/2/2/3;
-  }
+label{
+@include Button;
+align-self: flex-end;
+font-size: .875rem;
+font-weight: 400;
+display: flex;
+align-items: center;
+width: 5rem;
+order: 2;
+}
+input[type ="file"]{
+	display:none;
 }
 
 .clearButton {
   @include Button;
-  grid-area: 1/1/2/2;
-  justify-self: end;
-  align-self: end;
-  margin-right: 1rem;
+  order: 3;
 
   @include for-tablet-up {
     margin-bottom: 0.1rem;
@@ -95,22 +110,7 @@ select {
 .fileInput {
   font-size: 0.75rem;
   grid-area: 1/1/2/2;
-  justify-self: end;
-  align-self: end;
-  display: none;
-
-  @include for-tablet-up{
-	display: none;
-}
-
-  @include for-desktop-up {
-    grid-area: 1/1/2/2;
-    justify-self: end;
-    align-self: end;
-    display: none;
-  }
-
- 
+  margin-left: 2.5rem;
 }
 
 .editor {
