--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
 /*Media Queries*/
 /*Variables*/
+blockquote {
+  border-left: 0.25rem solid #8685EF;
+  padding-left: 0.5rem;
+}
+
+code {
+  white-space: pre;
+  background: #FFEFFF;
+}
+
 /*Scrollbar for chrome and safari*/
 .preview::-webkit-scrollbar-track,
 textarea::-webkit-scrollbar-track {
@@ -39,9 +49,8 @@ body {
   height: 100%;
   font-size: 0.75rem;
 }
-@media (min-width: 768px) {
+@media (min-width: 560px) {
   .App {
-    display: grid;
     grid-template-rows: 5.5rem 0.95fr auto;
     grid-template-columns: 1fr 1fr;
     font-size: 1rem;
@@ -52,9 +61,19 @@ body {
     grid-template-rows: 4rem 0.95fr auto;
   }
 }
-@media (min-width: 560px) and (max-width: 767px) and (orientation: landscape) {
+@media (min-width: 569px) and (max-width: 767px) and (orientation: landscape) {
   .App {
-    grid-template-rows: 3rem 1fr 2.5rem 1fr 0.5rem;
+    grid-template-rows: 2.5rem 0.95fr auto;
+  }
+}
+@media (max-width: 568px) and (orientation: landscape) {
+  .App {
+    grid-template-rows: 3rem 0.95fr auto;
+  }
+}
+@media (max-height: 200px) and (orientation: landscape) {
+  .App {
+    grid-template-rows: 1fr;
   }
 }
 
@@ -66,10 +85,50 @@ body {
   margin-left: 1rem;
   margin-right: 1rem;
 }
+@media (max-height: 200px) and (orientation: landscape) {
+  .container-header-editor {
+    display: none;
+  }
+}
 
 .header-editor {
   font-size: 0.95rem;
   font-weight: 600;
+  flex-basis: 45%;
+  text-align: start;
+}
+@media (min-width: 560px) {
+  .header-editor {
+    font-size: 1.25rem;
+    flex-basis: 55%;
+  }
+}
+@media (min-width: 1024px) {
+  .header-editor {
+    flex-basis: 60%;
+  }
+}
+@media (min-width: 1366px) {
+  .header-editor {
+    flex-basis: 70%;
+  }
+}
+@media (min-width: 768px) and (max-width: 899px) and (orientation: landscape) {
+  .header-editor {
+    font-size: 1.1rem;
+  }
+}
+@media (min-width: 569px) and (max-width: 767px) and (orientation: landscape) {
+  .header-editor {
+    font-size: 0.95rem;
+    flex-basis: 45%;
+  }
+}
+@media (max-width: 568px) and (orientation: landscape) {
+  .header-editor {
+    font-size: 0.95rem;
+    flex-basis: 55%;
+  }
 }
 
 .header-preview {
@@ -80,13 +139,33 @@ body {
   font-size: 0.95rem;
   font-weight: 600;
 }
-@media (min-width: 768px) {
+@media (max-height: 200px) and (orientation: landscape) {
+  .header-preview {
+    display: none;
+  }
+}
+@media (min-width: 560px) {
   .header-preview {
     grid-area: 1/2/2/3;
     justify-self: start;
     align-self: end;
     margin-left: 1rem;
     font-size: 1.25rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 899px) and (orientation: landscape) {
+  .header-preview {
+    font-size: 1.1rem;
+  }
+}
+@media (min-width: 569px) and (max-width: 767px) and (orientation: landscape) {
+  .header-preview {
+    font-size: 0.95rem;
+  }
+}
+@media (max-width: 568px) and (orientation: landscape) {
+  .header-preview {
+    font-size: 0.95rem;
   }
 }
 
@@ -99,13 +178,19 @@ label {
   -webkit-appearance: none;
   width: 3rem;
   height: 1.5rem;
-  align-self: flex-end;
   font-size: 0.875rem;
   font-weight: 400;
+  align-self: flex-end;
   display: flex;
   align-items: center;
   width: 5rem;
   order: 2;
+}
+@media (max-width: 568px) and (orientation: landscape) {
+  label {
+    width: 3rem;
+    font-size: 0.675rem;
+  }
 }
 
 input[type=file] {
@@ -123,9 +208,9 @@ input[type=file] {
   height: 1.5rem;
   order: 3;
 }
-@media (min-width: 768px) {
+@media (max-width: 568px) and (orientation: landscape) {
   .clearButton {
-    margin-bottom: 0.1rem;
+    font-size: 0.675rem;
   }
 }
 
@@ -135,7 +220,12 @@ input[type=file] {
   align-self: end;
   margin-right: 1rem;
 }
-@media (min-width: 768px) {
+@media (max-height: 200px) and (orientation: landscape) {
+  .previewDropdown {
+    display: none;
+  }
+}
+@media (min-width: 560px) {
   .previewDropdown {
     grid-area: 1/2/2/3;
     justify-self: end;
@@ -151,13 +241,16 @@ select {
   color: #ff00ee;
   border: 0.05rem solid #5b5b5b;
   border-radius: 0.2rem;
-  margin-bottom: 0.1rem;
+}
+@media (max-width: 568px) and (orientation: landscape) {
+  select {
+    font-size: 0.675rem;
+  }
 }
 
 .fileInput {
   font-size: 0.75rem;
   grid-area: 1/1/2/2;
-  margin-left: 2.5rem;
 }
 
 .editor {
@@ -177,10 +270,22 @@ select {
   margin-right: 1rem;
   margin-top: 0.2rem;
 }
-@media (min-width: 768px) {
+@media (min-width: 560px) {
   .editor {
     grid-area: 2/1/3/2;
-    font-size: 1rem;
+    font-size: 0.75rem;
+  }
+}
+@media (max-height: 200px) and (orientation: landscape) {
+  .editor {
+    grid-area: 1/1/2/2;
+    font-size: 0.5rem;
+    margin-top: 0;
+  }
+}
+@media (max-width: 568px) and (orientation: landscape) {
+  .editor {
+    font-size: 0.675rem;
   }
 }
 
@@ -192,16 +297,27 @@ select {
   overflow: scroll;
   margin-right: 1rem;
   margin-left: 1rem;
-  margin-top: 0.1rem;
+  margin-top: 0.2rem;
   padding: 0 0.25rem;
   scrollbar-color: #ff00ee white;
   scrollbar-width: thin;
 }
-@media (min-width: 768px) {
+@media (min-width: 560px) {
   .preview {
     grid-area: 2/2/3/3;
     font-size: 0.75rem;
-    margin-top: 0.2rem;
+  }
+}
+@media (max-height: 200px) and (orientation: landscape) {
+  .preview {
+    grid-area: 1/2/2/2;
+    font-size: 0.5rem;
+    margin-top: 0;
+  }
+}
+@media (max-width: 568px) and (orientation: landscape) {
+  .preview {
+    font-size: 0.675rem;
   }
 }
 
@@ -210,16 +326,26 @@ select {
   grid-area: 6/1/7/1;
   font-size: 0.55rem;
 }
-@media (min-width: 768px) {
+@media (max-height: 200px) and (orientation: landscape) {
+  .footer {
+    display: none;
+  }
+}
+@media (min-width: 560px) {
   .footer {
     grid-area: 3/1/4/3;
     font-size: 0.75rem;
     align-self: end;
   }
 }
+@media (min-width: 569px) and (max-width: 767px) and (orientation: landscape) {
+  .footer {
+    align-self: center;
+  }
+}
 
 img {
-  width: 25%;
+  width: 20%;
   height: auto;
 }
 
