--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
 /*Media Queries*/
 /*Variables*/
 blockquote {
-  border-left: 0.25rem solid #8685EF;
+  border-left: 0.25rem solid #8685ef;
   padding-left: 0.5rem;
 }
 
 code {
   white-space: pre;
-  background: #FFEFFF;
+  background: #ffefff;
 }
 
 /*Scrollbar for chrome and safari*/
@@ -91,47 +91,47 @@ body {
   }
 }
 
-.header-editor {
+.title-editor {
   font-size: 0.95rem;
   font-weight: 600;
   flex-basis: 45%;
   text-align: start;
 }
 @media (min-width: 560px) {
-  .header-editor {
+  .title-editor {
     font-size: 1.25rem;
     flex-basis: 55%;
   }
 }
 @media (min-width: 1024px) {
-  .header-editor {
+  .title-editor {
     flex-basis: 60%;
   }
 }
 @media (min-width: 1366px) {
-  .header-editor {
-    flex-basis: 70%;
+  .title-editor {
+    flex-basis: 75%;
   }
 }
 @media (min-width: 768px) and (max-width: 899px) and (orientation: landscape) {
-  .header-editor {
+  .title-editor {
     font-size: 1.1rem;
   }
 }
 @media (min-width: 569px) and (max-width: 767px) and (orientation: landscape) {
-  .header-editor {
+  .title-editor {
     font-size: 0.95rem;
     flex-basis: 45%;
   }
 }
 @media (max-width: 568px) and (orientation: landscape) {
-  .header-editor {
+  .title-editor {
     font-size: 0.95rem;
     flex-basis: 55%;
   }
 }
 
-.header-preview {
+.title-preview {
   grid-area: 3/1/4/2;
   justify-self: start;
   align-self: end;
@@ -140,12 +140,12 @@ body {
   font-weight: 600;
 }
 @media (max-height: 200px) and (orientation: landscape) {
-  .header-preview {
+  .title-preview {
     display: none;
   }
 }
 @media (min-width: 560px) {
-  .header-preview {
+  .title-preview {
     grid-area: 1/2/2/3;
     justify-self: start;
     align-self: end;
@@ -154,17 +154,17 @@ body {
   }
 }
 @media (min-width: 768px) and (max-width: 899px) and (orientation: landscape) {
-  .header-preview {
+  .title-preview {
     font-size: 1.1rem;
   }
 }
 @media (min-width: 569px) and (max-width: 767px) and (orientation: landscape) {
-  .header-preview {
+  .title-preview {
     font-size: 0.95rem;
   }
 }
 @media (max-width: 568px) and (orientation: landscape) {
-  .header-preview {
+  .title-preview {
     font-size: 0.95rem;
   }
 }
@@ -193,7 +193,7 @@ label {
   }
 }
 
-input[type=file] {
+input[type="file"] {
   display: none;
 }
 
@@ -269,11 +269,23 @@ select {
   margin-left: 1rem;
   margin-right: 1rem;
   margin-top: 0.2rem;
+  scrollbar-color: #ff00ee #080808;
+  scrollbar-width: thin;
 }
 @media (min-width: 560px) {
   .editor {
     grid-area: 2/1/3/2;
-    font-size: 0.75rem;
+    font-size: 0.8rem;
+  }
+}
+@media (min-width: 1024px) {
+  .editor {
+    font-size: 0.85rem;
+  }
+}
+@media (min-width: 1366px) {
+  .editor {
+    font-size: 0.9rem;
   }
 }
 @media (max-height: 200px) and (orientation: landscape) {
@@ -305,7 +317,17 @@ select {
 @media (min-width: 560px) {
   .preview {
     grid-area: 2/2/3/3;
-    font-size: 0.75rem;
+    font-size: 0.825rem;
+  }
+}
+@media (min-width: 1024px) {
+  .preview {
+    font-size: 0.855rem;
+  }
+}
+@media (min-width: 1366px) {
+  .preview {
+    font-size: 0.875rem;
   }
 }
 @media (max-height: 200px) and (orientation: landscape) {
