--- a/src/style/_components.scss
+++ b/src/style/_components.scss
@@ -19,6 +19,23 @@
   -webkit-appearance: none;
   width: 3rem;
   height: 1.5rem;
+
+
+}
+
+button:active{
+  transform: translateY(-2px);
+  opacity: 0.5;
+}
+
+label[for= "file"]:active{
+  transform: translateY(-2px);
+  opacity: 0.5;
+}
+
+select:active{
+  transform: translateY(-2px);
+  opacity: 0.5;
 }
 
 @mixin Dropdown {
